# NightmareBeforeChristmas

./: .gitignore  README.md
GLImac-Template/: CMakeLists.txt
GLImac-Template/assets/content/: book.mtl  graveyard.mtl  hill.mtl  pumpkin1.mtl  tomb1.mtl
GLImac-Template/assets/scenes/: scene1.json  scene2.json  scene3.json  scenesList.json
GLImac-Template/dev/: main.cpp
GLImac-Template/dev/assets/scenes/: scene1.json
GLImac-Template/dev/shaders/: shader.fs.glsl  shader.vs.glsl
GLImac-Template/dev_default_assimp/: main.cpp
GLImac-Template/dev_default_assimp/shaders/: shader.fs.glsl  shader.vs.glsl
GLImac-Template/dev_defualt_assimp_test/: main.cpp
GLImac-Template/glimac/include/glimac/: fileloader.hpp
GLImac-Template/glimac/src/: fileloader.cpp  scene.cpp
GLImac-Template/projet/: CMakeLists.txt
GLImac-Template/projet/include/projet/: AmbientLight.hpp  DirectionalLight.hpp  Engine.hpp  FreeflyCamera.hpp  Light.hpp  Mesh.hpp  PointLight.hpp  Scene.hpp  Shader.hpp  TrackballCamera.hpp  Vertex.hpp  default_assimp_mesh.hpp  default_assimp_texture.hpp  engine.hpp  fileloader.hpp  scene.hpp  shader.hpp  utils.hpp
GLImac-Template/projet/src/: AmbientLight.cpp  DirectionalLight.cpp  Engine.cpp  FreeflyCamera.cpp  Light.cpp  Mesh.cpp  PointLight.cpp  Scene.cpp  Shader.cpp  TrackballCamera.cpp  Vertex.cpp  default_assimp_mesh.cpp  default_assimp_texture.cpp  engine.cpp  fileloader.cpp  scene.cpp  shader.cpp  utils.cpp
GLImac-Template/tests/: CMakeLists.txt  Mesh.cpp  Vertex.cpp
